[package]
name = "butterOS"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9.8"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.5.2"
volatile = "0.2.6"
x86_64 = "0.14.2"

[pachage.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0x04,iosize=0x04"]